--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements-prod.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT scripts.start_production:main()
+    startCommand: gunicorn --bind 0.0.0.0:$PORT scripts.start_production:main
     healthCheckPath: /health
     envVars:
       - key: OPENAI_API_KEY
@@ -15,10 +15,8 @@ services:
         sync: false
       - key: TWILIO_PHONE_NUMBER
         sync: false
-      - key: QDRANT_HOST
-        value: "your-qdrant-host"
-      - key: QDRANT_PORT
-        value: "6333"
+      - key: QDRANT_URL
+        value: "http://localhost:6333"
       - key: QDRANT_API_KEY
         sync: false
       - key: FLASK_ENV
