--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,4 +1,5 @@
 # Core RAG dependencies
+numpy>=1.21.0
 openai>=1.0.0
 chromadb>=0.4.0
 sentence-transformers>=2.2.0
@@ -7,6 +8,18 @@ flask-cors>=6.0.0
 twilio>=8.0.0
 python-dotenv>=1.0.0
 tqdm>=4.65.0
+
+# Vector databases
+qdrant-client>=1.7.0
+
+# Reddit API dependencies
+praw>=7.7.0
+schedule>=1.2.0
+
+# Web scraping and utilities
+requests>=2.28.0
+trafilatura>=2.0.0
+scikit-learn>=1.1.0
 
 # Production web server
 gunicorn>=21.0.0
