--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -21,6 +21,9 @@ requests>=2.28.0
 trafilatura>=2.0.0
 scikit-learn>=1.1.0
 
+# Data processing
+pandas>=2.0.0
+
 # Production web server
 gunicorn>=21.0.0
 
